--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
                     <a class="navegacion__link"  href="https://goo.gl/maps/Tqo8Wybzqh3nLFT19" target="_blanck">Cercanos a mi</a>
                 </li>
                 <li class="navegacion__elemento">
-                    <a class="navegacion__link"  href="../pages/lista.html">Locales</a>
+                    <a class="navegacion__link"  href="./pages/lista.html">Locales</a>
                 </li>
                 <li class="navegacion__elemento">
-                    <a class="navegacion__link"  href="../pages/contacto.html">Contacto</a>
+                    <a class="navegacion__link"  href="./pages/contacto.html">Contacto</a>
                 </li>
             </ul>
         </nav>
