--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>ReservaOnline</title>
     <link rel="stylesheet" href="./css/estilos.css">
 </head>
-<body class="local">
+<body class="cuerpoIndex">
     <header class="header">
         <a class="nombre" href="../index.html">
             <h1 class="reservaonline">ReservaOnline</h1>
@@ -60,14 +60,12 @@
             <a class="pages__buscar" href="./pages/lista.html">Buscar local</a>
             <!--Este boton deberia filtrar los resultados de los formularios anteriores pero por ahora solo nos lleva a la lista completa de locales-->
         </div>
-        <footer>
-            <a class="pages__lista" href="./pages/lista.html">Lista de locales</a>
-            <!--Nos muestra la lista completa de locales-->
-            <span class="pages__span"> | </span>
-            <a class="pages__contacto" href="./pages/contacto.html">Contacto</a>
-            <!--Nos lleva a la pagina de contacto-->
-        </footer>
     </section>
-
+    <footer class="piedepagina">
+        <a class="pages__lista" href="./pages/lista.html">Lista de locales</a>
+        <!--Nos muestra la lista completa de locales-->
+        <a class="pages__contacto" href="./pages/contacto.html">Contacto</a>
+        <!--Nos lleva a la pagina de contacto-->
+    </footer>
 </body>
 </html>
