--- a/pages/lista.html
+++ b/pages/lista.html
@@ -41,59 +41,70 @@
     </nav>
     <section class="locales">
         <div class="comida" id="pettra">
-            <h3 class="comida__nombre">Pettra</h3>    
+            <a href="../pages/local.html"><h3 class="comida__nombre">Pettra</h3></a>    
         </div>
         <div></div>
         <div>
-            <img class="comida__alt" src="../assets/Logos/Petra logo.jpg" alt="pettralogo">
+            <a href="../pages/local.html"><img class="comida__alt" src="../assets/Logos/Petra logo.jpg" alt="pettralogo"></a>
         </div>
         <div>
             <h5 class="comida__descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et assumenda quasi laboriosam debitis, quam vitae, odit ab alias, praesentium numquam ad possimus! Delectus quidem itaque sequi consectetur fugiat, porro in!</h5>
-            <a class="visitar" href="../pages/local.html">Visitar</a>
         </div>
         <div class="comida" id="mcdonalds">
-            <h3 class="comida__nombre">Mcdonalds</h3>   
+            <a href="../pages/local.html">
+                <h3 class="comida__nombre">Mcdonalds</h3>   
+            </a>
         </div>
         <div></div>
         <div>
-            <img class="comida__imagen" src="../assets/Logos/Mcdonalds.png" alt="mcdonaldslogo">
+            <a href="../pages/local.html">
+                <img class="comida__imagen" src="../assets/Logos/Mcdonalds.png" alt="mcdonaldslogo">
+            </a>
         </div>
         <div>
             <h5 class="comida__descripcion">McDonald's es una franquicia de restaurantes de comida rápida estadounidense con sede en Chicago, Illinois.​ Sus principales productos son las hamburguesas, las patatas fritas, los menús para el desayuno y los refrescos.</h5>
-            <a class="visitar" href="../pages/local.html">Visitar</a>
         </div>
         <div class="comida" id="uptown">
-            <h3 class="comida__nombre">Uptown Bar</h3>
+            <a href="../pages/local.html">
+                <h3 class="comida__nombre">Uptown Bar</h3>
+            </a>
         </div>
         <div></div>
         <div>
-            <img class="comida__imagen" src="../assets/Logos/uptownbar.jpg" alt="uptownbarlogo">
+            <a href="../pages/local.html">
+                <img class="comida__imagen" src="../assets/Logos/uptownbar.jpg" alt="uptownbarlogo">
+            </a>
         </div>
         <div>
             <h5 class="comida__descripcion">En el barrio conocido como Palermo Hollywood de Buenos Aires está The Uptown, el bar que recrea a la perfección una estación del subterráneo de Nueva York.</h5>
-            <a class="visitar" href="../pages/local.html">Visitar</a>
         </div>
         <div class="comida" id="meet">
-            <h3 class="comida__nombre">Meet</h3>  
+            <a href="../pages/local.html">
+                <h3 class="comida__nombre">Meet</h3> 
+            </a> 
         </div>
         <div></div>
         <div>
-            <img class="comida__imagen" src="..//assets/Logos/meet.jpg" alt="meetlogo">
+            <a href="../pages/local.html">
+                <img class="comida__imagen" src="..//assets/Logos/meet.jpg" alt="meetlogo">
+            </a>
         </div>
         <div>
             <h5 class="comida__descripcion">Un lugar ideal para compartir buenos momentos con quien mas quieras. Perfecto para los amantes del buen comer y la cocina de alto nivel.</h5>
-            <a class="visitar" href="../pages/local.html">Visitar</a>
         </div>
         <div class="comida" id="la25">
-            <h3 class="comida__nombre">Sandwicheria la 25</h3>
+            <a href="../pages/local.html">
+                <h3 class="comida__nombre">Sandwicheria la 25</h3>
+            </a>
         </div>
         <div></div>
         <div>
-            <img class="comida__imagen" src="../assets/Logos/la25.jpg" alt="la25logo">
+            <a href="../pages/local.html">
+                <img class="comida__imagen" src="../assets/Logos/la25.jpg" alt="la25logo">
+            </a>
         </div>
         <div>
             <h5 class="comida__descripcion">El mejor restaurante para disfrutar de un excelente momento en familia. Ofrecemos un amplio menu de comidas aptas para todos los tipos de paladares.</h5>
-            <a class="visitar" href="../pages/local.html">Visitar</a>
         </div>
     </section>
 </body>
