--- a/pages/local.html
+++ b/pages/local.html
@@ -31,7 +31,9 @@
         </nav>
     </header>
     <section class="inicio">
-        <img class="petralogo" src="../assets/Logos/Petra logo.jpg" alt="petralogo">
+        <div class="petralogo">
+            <img class="petralogo__img" src="../assets/Logos/Petra logo.jpg" alt="petralogo">
+        </div>
         <section> <!--Slide de fotos-->
             <div class="contenedor">
 
@@ -61,6 +63,7 @@
                 
                 </div>
         </section>
+        <div></div>
         <section class="descripcion">
             <h4 class="descripcion__texto">
                 El restaurante San rafaelino no solo cambia su menú por estaciones, sino que muda contexto, fachada, paisaje y look en tres temporadas al año. Pettra es un espacio de alta cocina con un modelo creativo a seguir, pero también un lugar del que el comensal no quiere marcharse una vez que logra sentarse en sus demandadas mesas. Así es Pettra por dentro, la organización de su equipo y su sistema de trabajo, su modelo creativo, la experiencia del cliente a través de su menú del pasado verano (‘Summer Season’ 2021) y un repaso a la historia del negocio de René Redzepi, con su capacidad para agitar Mendoza y convertir la ciudad en un epicentro gastronómico global. Posicionado 4 años como mejor restaurante del mundo en la lista ‘The World’s 50 Best Restaurants’ y con opciones de convertirse en líder en 2021, Pettra recibió hace unos días contra todo pronóstico la tercera estrella Michelin.
@@ -77,7 +80,9 @@
     </section>
     
     <section class="menu">
-        <img class="menu__logo" src="../assets/Logos/Menu.png" alt="menulogo">
+        <div class="menu__imagen">
+            <img class="menu__logo" src="../assets/Logos/Menu.png" alt="menulogo">
+        </div>
         <nav class="menu__nav">
             <ul class="navegacion--menu">
                 <li class="navegacion__elemento"> <a class="navegacion__link--menu" href="#comidarapida">Comida Rapida</a> </li>
@@ -132,7 +137,7 @@
 
     <footer class="piedepagina">
 
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3283.8154319499777!2d-68.35309128447511!3d-34.60882838045806!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x96790813edce7661%3A0x74ccad8d212d5a8e!2sPettra%20Resto!5e0!3m2!1ses-419!2sar!4v1647034223456!5m2!1ses-419!2sar" width="300" height="225" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3283.8154319499777!2d-68.35309128447511!3d-34.60882838045806!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x96790813edce7661%3A0x74ccad8d212d5a8e!2sPettra%20Resto!5e0!3m2!1ses-419!2sar!4v1647034223456!5m2!1ses-419!2sar" class="mapa"  style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         <a href="https://www.facebook.com/pettra.resto/">
             <img class="facebook" src="../assets/Logos/facebook-600.png" alt="facebooklogo">
         </a>
