--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body class="cuerpoIndex">
     <header class="header">
         <a class="nombre" href="../index.html">
-            <h1 class="reservaonline">ReservaOnline</h1>
+            <h1 class="reservaonline">ReservasOnline</h1>
         </a>
         <!--Barra de navegacion-->
         <nav>
