--- a/pages/local.html
+++ b/pages/local.html
@@ -10,7 +10,7 @@
 <body class="cuerpoLocal">
     <header class="header">
         <a class="nombre" href="../index.html">
-            <h1 class="reservaonline">ReservaOnline</h1>
+            <h1 class="reservaonline">ReservasOnline</h1>
         </a>
 
         <nav>
@@ -94,12 +94,12 @@
         <ul class="comida" id="comidarapida">
             <h3 class="comida__tipo">Comida Rapida</h3>
             <li>
-                <h3 class="comida__nombre">Pancho</h3>
+                <h3 class="comida__nombre--alt">Pancho</h3>
                 <img class="comida__imagen" src="../assets/Images/Pancho.jpg" alt="pancho">
                 <h5 class="comida__descripcion">Pan, Salchica, Aderezo, Salsa a elección</h5>
             </li>
             <li>
-                <h3 class="comida__nombre">Hamburguesa</h3>
+                <h3 class="comida__nombre--alt">Hamburguesa</h3>
                 <img class="comida__imagen" src="../assets/Images/Hamburguesa.jpg" alt="hamburguesa">
                 <h5 class="comida__descripcion">Pan, medallon de carne, Aderezo, Salsa a elección, Tomate y lechuga, Huevo, sale con porcion de papas fritas </h5>
             </li>
@@ -107,12 +107,12 @@
         <ul class="comida" id="bebidas">
             <h3 class="comida__tipo">Bebidas</h3>
             <li>
-                <h3 class="comida__nombre">Cerveza</h3>
+                <h3 class="comida__nombre--alt">Cerveza</h3>
                 <img class="comida__imagen" src="../assets/Images/cerveza.jpg" alt="cerveza">
                 <h5 class="comida__descripcion">Cerveza artesanal rubia de amargura media</h5>
             </li>
             <li>
-                <h3 class="comida__nombre">Vino</h3>
+                <h3 class="comida__nombre--alt">Vino</h3>
                 <img class="comida__imagen" src="../assets/Images/vino.jpg" alt="vino">
                 <h5 class="comida__descripcion">Vino tinto producido en la mejor bodega mendocina</h5>
             </li>
@@ -120,12 +120,12 @@
         <ul class="comida" id="postres">
             <h3 class="comida__tipo">Postres</h3>
             <li>
-                <h3 class="comida__nombre">Lemon Pie</h3>
+                <h3 class="comida__nombre--alt">Lemon Pie</h3>
                 <img class="comida__imagen" src="../assets/Images/lemonpie.jpg" alt="lemonpie">
                 <h5 class="comida__descripcion">Postre clasico con la combinacion perfecta de dulzura y acides</h5>
             </li>
             <li>
-                <h3 class="comida__nombre">Torta de cholotae</h3>
+                <h3 class="comida__nombre--alt">Torta de cholotae</h3>
                 <img class="comida__imagen" src="../assets/Images/tortachocolate.jpg" alt="tortachocolate">
                 <h5 class="comida__descripcion">La mejor opcion para los amantes de lo dulce</h5>
             </li>
