--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -10,7 +10,7 @@
 <body class="cuerpoContacto">
     <header class="header">
         <a class="nombre" href="../index.html">
-            <h1 class="reservaonline">ReservaOnline</h1>
+            <h1 class="reservaonline">ReservasOnline</h1>
         </a>
 
         <nav>
