--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ReservaOnline</title>
     <link rel="stylesheet" href="./css/estilos.css">
+    <link rel="stylesheet" href="./libs/bootstrap-5.1.3-dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./libs/bootstrap-5.1.3-dist/js/bootstrap.min.js">
 </head>
 <body class="cuerpoIndex">
     <header class="header">
@@ -13,22 +15,21 @@
             <h1 class="reservaonline">ReservasOnline</h1>
         </a>
         <!--Barra de navegacion-->
-        <nav>
-            <ul class="navegacion">
-                <li class="navegacion__elemento">
-                    <a class="navegacion__link" href="../index.html">Inicio</a>
-                </li>
-                <li class="navegacion__elemento">
-                    <a class="navegacion__link"  href="https://goo.gl/maps/Tqo8Wybzqh3nLFT19" target="_blanck">Cercanos a mi</a>
-                </li>
-                <li class="navegacion__elemento">
-                    <a class="navegacion__link"  href="./pages/lista.html">Locales</a>
-                </li>
-                <li class="navegacion__elemento">
-                    <a class="navegacion__link"  href="./pages/contacto.html">Contacto</a>
-                </li>
-            </ul>
-        </nav>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light navegacion">
+            <div class="container-fluid">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                    <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                    <a class="nav-link" href="https://goo.gl/maps/Tqo8Wybzqh3nLFT19" target="_blanck">Cercanos a mi</a>
+                    <a class="nav-link" href="./pages/lista.html">Locales</a>
+                    <a class="nav-link" href="./pages/contacto.html">Contacto</a>
+                </div>
+                </div>
+            </div>
+            </nav>
     </header>
 
     <section class="pages">
@@ -39,8 +40,8 @@
                 <!--Nos dirige a una nueva ventana de google maps-->
             </h3>
         </div>
-        <div class="pages__div">
-            <select name="tipos" class="pages__tipo">
+        <div class="pages__div dropdown">
+            <select name="tipos" class="pages__tipo dropdown">
                 <option value="1" disabled selected>Tipo de local</option>
                 <option value="buffet">Buffet</option>
                 <option value="gourmet">Gourmet</option>
@@ -50,6 +51,7 @@
                 <!--Podemos elegir el tipo de buffet que andamos buscando-->
             </select>
         </div>
+
         <div class="pages__div">
             <p class="pages__nombre">
                 <input class="pages__cercanos" type="text" name="nombre" placeholder="Buscar por nombre">
@@ -67,5 +69,7 @@
         <a class="pages__contacto" href="./pages/contacto.html">Contacto</a>
         <!--Nos lleva a la pagina de contacto-->
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
 </body>
 </html>
