--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacto</title>
     <link rel="stylesheet" href="../css/estilos.css">
+    <link rel="stylesheet" href="../libs/bootstrap-5.1.3-dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../libs/bootstrap-5.1.3-dist/js/bootstrap.min.js">
 </head>
 <body class="cuerpoContacto">
     <header class="header">
@@ -13,24 +15,23 @@
             <h1 class="reservaonline">ReservasOnline</h1>
         </a>
 
-        <nav>
-            <ul class="navegacion">
-                <li class="navegacion__elemento">
-                    <a class="navegacion__link" href="../index.html">Inicio</a>
-                </li>
-                <li class="navegacion__elemento">
-                    <a class="navegacion__link"  href="https://goo.gl/maps/Tqo8Wybzqh3nLFT19" target="_blanck">Cercanos a mi</a>
-                </li>
-                <li class="navegacion__elemento">
-                    <a class="navegacion__link"  href="../pages/lista.html">Locales</a>
-                </li>
-                <li class="navegacion__elemento">
-                    <a class="navegacion__link"  href="../pages/contacto.html">Contacto</a>
-                </li>
-            </ul>
-        </nav>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light navegacion">
+            <div class="container-fluid">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                    <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
+                    <a class="nav-link" href="https://goo.gl/maps/Tqo8Wybzqh3nLFT19" target="_blanck">Cercanos a mi</a>
+                    <a class="nav-link" href="../pages/lista.html">Locales</a>
+                    <a class="nav-link active" href="../pages/contacto.html">Contacto</a>
+                </div>
+                </div>
+            </div>
+            </nav>
     </header>
-    <form class="menu--contacto" action="procesar.php" method="post">
+    <form class="menu--contacto container-fluid px-2 mx-auto" action="procesar.php" method="post">
 
         <fieldset class="contacto">
         <div>
@@ -62,5 +63,7 @@
         <input class="contacto__boton" type="reset" value="Borrar">
         </div>
         </fieldset>
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
 </body>
 </html>
