--- a/pages/local.html
+++ b/pages/local.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Local</title>
     <link rel="stylesheet" href="../css/estilos.css">
+    <link rel="stylesheet" href="../libs/bootstrap-5.1.3-dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../libs/bootstrap-5.1.3-dist/js/bootstrap.min.js">
 </head>
 <body class="cuerpoLocal">
     <header class="header">
@@ -13,56 +15,63 @@
             <h1 class="reservaonline">ReservasOnline</h1>
         </a>
 
-        <nav>
-            <ul class="navegacion">
-                <li class="navegacion__elemento">
-                    <a class="navegacion__link" href="../index.html">Inicio</a>
-                </li>
-                <li class="navegacion__elemento">
-                    <a class="navegacion__link"  href="https://goo.gl/maps/Tqo8Wybzqh3nLFT19" target="_blanck">Cercanos a mi</a>
-                </li>
-                <li class="navegacion__elemento">
-                    <a class="navegacion__link"  href="../pages/lista.html">Locales</a>
-                </li>
-                <li class="navegacion__elemento">
-                    <a class="navegacion__link"  href="../pages/contacto.html">Contacto</a>
-                </li>
-            </ul>
-        </nav>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light navegacion">
+            <div class="container-fluid">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                    <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                    <a class="nav-link" href="https://goo.gl/maps/Tqo8Wybzqh3nLFT19" target="_blanck">Cercanos a mi</a>
+                    <a class="nav-link" href="../pages/lista.html">Locales</a>
+                    <a class="nav-link" href="../pages/contacto.html">Contacto</a>
+                </div>
+                </div>
+            </div>
+            </nav>
     </header>
     <section class="inicio">
         <div class="petralogo">
             <img class="petralogo__img" src="../assets/Logos/Petra logo.jpg" alt="petralogo">
         </div>
-        <section> <!--Slide de fotos-->
-            <div class="contenedor">
 
-                <ul class="listas">
-                    <li id="slide1" class="listas__elemento">
-                    <img class="listas__imagen" src="../assets/Images/Pettra1.jpg" alt="pettraportada1"/>
-                    </li>
-                    <li id="slide2" class="listas__elemento">
-                    <img class="listas__imagen"  src="../assets/Images/Pettra2.jpg" alt="pettraportada1"/>
-                    </li>
-                    <li id="slide3" class="listas__elemento">
-                    <img class="listas__imagen"  src="../assets/Images/Pettra3.jpg" alt="pettraportada1"/>
-                    </li>
-                </ul>
-                
-                <ul class="boton"><!--Cada vez que presiono un boton, el display se ubica en la foto-->
-                    <li class="boton__elemento">
-                    <a class="boton__nro" href="#slide1" tabindex="">1</a>
-                    </li>
-                    <li class="boton__elemento">
-                    <a class="boton__nro"  href="#slide2" tabindex="">2</a>
-                    </li>
-                    <li class="boton__elemento">
-                    <a class="boton__nro"  href="#slide3" tabindex="">3</a>
-                    </li>
-                </ul>
-                
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-12">
+                    <div id="carouselExampleIndicators" class="carousel slide container-fluid" data-bs-ride="carousel">
+                        <div class="carousel-indicators">
+                          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                        </div>
+                        <div class="carousel-inner container-fluid">
+                          <div class="carousel-item active">
+                            <img src="../assets/Images/Pettra1.jpg" class="d-block w-100 img-fluid" alt="...">
+                          </div>
+                          <div class="carousel-item">
+                            <img src="../assets/Images/Pettra2.jpg" class="d-block w-100 img-fluid" alt="...">
+                          </div>
+                          <div class="carousel-item">
+                            <img src="../assets/Images/Pettra3.jpg" class="d-block w-100 img-fluid" alt="...">
+                          </div>
+                        </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                          <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                          <span class="visually-hidden">Next</span>
+                        </button>
+                      </div>
                 </div>
-        </section>
+            </div>
+        </div>
+
+
+
+
         <div></div>
         <section class="descripcion">
             <h4 class="descripcion__texto">
@@ -83,7 +92,7 @@
         <div class="menu__imagen">
             <img class="menu__logo" src="../assets/Logos/Menu.png" alt="menulogo">
         </div>
-        <nav class="menu__nav">
+        <nav class="menu__nav navbar nav justify-content-center container-fluid">
             <ul class="navegacion--menu">
                 <li class="navegacion__elemento"> <a class="navegacion__link--menu" href="#comidarapida">Comida Rapida</a> </li>
                 <li class="navegacion__elemento"> <a class="navegacion__link--menu" href="#bebidas">Bebidas</a> </li>
@@ -142,6 +151,7 @@
             <img class="facebook" src="../assets/Logos/facebook-600.png" alt="facebooklogo">
         </a>
     </footer>
-
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
 </body>
 </html>
