--- a/pages/local.html
+++ b/pages/local.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Local</title>
-    <link rel="stylesheet" href="../css/estilos.css">
+    <link rel="stylesheet" href="../sass/estilos.css">
     <link rel="stylesheet" href="../libs/bootstrap-5.1.3-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../libs/bootstrap-5.1.3-dist/js/bootstrap.min.js">
 </head>
@@ -74,10 +74,10 @@
 
         <div></div>
         <section class="descripcion">
-            <h4 class="descripcion__texto">
+            <p class="descripcion__texto">
                 El restaurante San rafaelino no solo cambia su menú por estaciones, sino que muda contexto, fachada, paisaje y look en tres temporadas al año. Pettra es un espacio de alta cocina con un modelo creativo a seguir, pero también un lugar del que el comensal no quiere marcharse una vez que logra sentarse en sus demandadas mesas. Así es Pettra por dentro, la organización de su equipo y su sistema de trabajo, su modelo creativo, la experiencia del cliente a través de su menú del pasado verano (‘Summer Season’ 2021) y un repaso a la historia del negocio de René Redzepi, con su capacidad para agitar Mendoza y convertir la ciudad en un epicentro gastronómico global. Posicionado 4 años como mejor restaurante del mundo en la lista ‘The World’s 50 Best Restaurants’ y con opciones de convertirse en líder en 2021, Pettra recibió hace unos días contra todo pronóstico la tercera estrella Michelin.
 
-            </h4>
+            </p>
             <ul class="caracteristicas">
                 <li>CAPACIDAD: 150 personas</li>
                 <li>AMBIENTES: Planta baja, planta alta, terraza y patio</li>
