--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ReservaOnline</title>
+    <title>ReservasOnline</title>
     <link rel="stylesheet" href="./sass/estilos.css">
     <link rel="stylesheet" href="./libs/bootstrap-5.1.3-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="./libs/bootstrap-5.1.3-dist/js/bootstrap.min.js">
+    <meta name="description" content="Realiza tu reserva online de forma rapida, sencilla y eficaz. Su sitio de reservas favorito para conocer toda la información de los restaurantes de interés.">
+    <meta name="keywords"  content="reservar, reservar restaurante, comida, restaurante, local gastronomico, mejores restaurantes, restaurantes acogedores e intimos, restaurantes cercanos, restaurantes cercanos, restaurantes argentinos, local de comida">
 </head>
 <body class="cuerpoIndex">
     <header class="header">
