--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
+<>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="../sass/estilos.css">
     <link rel="stylesheet" href="../libs/bootstrap-5.1.3-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../libs/bootstrap-5.1.3-dist/js/bootstrap.min.js">
+    <meta name="description" content="ReservasOnline siempre esta abierto a nuevos clientes. Si desea ser uno de ellos, complete el formulario de contacto.">
+    <meta name="keywords"  content="reservar, reservar restaurante, comida, restaurante, local gastronomico, mejores restaurantes, restaurantes acogedores e intimos, restaurantes cercanos, restaurantes cercanos, restaurantes argentinos, local de comida">
 </head>
 <body class="cuerpoContacto">
     <header class="header">
