--- a/pages/lista.html
+++ b/pages/lista.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
+<>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lista de Locales</title>
+    <title>ReservasOnline-Lista de Locales</title>
     <link rel="stylesheet" href="../sass/estilos.css">
     <link rel="stylesheet" href="../libs/bootstrap-5.1.3-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../libs/bootstrap-5.1.3-dist/js/bootstrap.min.js">
+    <meta name="description" content="Te ofrecemos una lista completa de los locales que cumplan con tus requisitos de busqueda.">
+    <meta name="keywords"  content="reservar, reservar restaurante, comida, restaurante, local gastronomico, mejores restaurantes, restaurantes acogedores e intimos, restaurantes cercanos, restaurantes cercanos, restaurantes argentinos, local de comida">
 </head>
 <body class="cuerpoLista">
     <header class="header">
@@ -42,9 +44,9 @@
     </nav>
 
     <p class="display-1 text-center tipo__comida" id="buffet"><strong>Buffet</strong></p>
-    <div class="card-group container-fluid container-sm my-4 cartas">
+    <div class="c__cartas card-group container-fluid container-sm my-4 c__cartas">
         <div class="row">
-            <div class="card container-fluid col-3 bg-dark text-white" style="height: fit-content;">
+            <div class="card container-fluid col-3 bg-dark text-white cartas" style="height: fit-content;">
                 <img src="../assets/Logos/Petra logo.jpg" class="card-img-top img-fluid img-thumbnail" alt="pettralogo">
                 <div class="card-body">
                 <h5 class="card-title">Pettra</h5>
@@ -52,7 +54,7 @@
                 <a href="../pages/local.html" class="btn btn-outline-warning btn-block">Ver más</a>
                 </div>
             </div>
-            <div class="card container-fluid col-3 bg-dark text-white" style="height: fit-content;">
+            <div class="card container-fluid col-3 bg-dark text-white cartas" style="height: fit-content;">
                 <img src="../assets/Logos/la25.jpg" class="card-img-top img-fluid img-thumbnail" alt="la25logo">
                 <div class="card-body">
                 <h5 class="card-title">La 25</h5>
@@ -60,7 +62,7 @@
                 <a href="../pages/local.html" class="btn btn-outline-warning btn-block">Ver más</a>
                 </div>
             </div>
-            <div class="card container-fluid col-3 bg-dark text-white" style="height: fit-content;">
+            <div class="card container-fluid col-3 bg-dark text-white cartas" style="height: fit-content;">
                 <img src="../assets/Logos/meet.jpg" class="card-img-top img-fluid img-thumbnail" alt="meetlogo">
                 <div class="card-body">
                 <h5 class="card-title">Meet</h5>
@@ -74,7 +76,7 @@
     <p class="display-1 text-center tipo__comida" id="rapida"><strong>Comida Rápida</strong></p>
     <div class="card-group container-fluid container-sm cartas">
         <div class="row">
-            <div class="card container-fluid col-3 bg-dark text-white" style="height: fit-content;">
+            <div class="card container-fluid col-3 bg-dark text-white cartas" style="height: fit-content;">
                 <img src="../assets/Logos/kfc.jpg" class="card-img-top img-fluid img-thumbnail" alt="kfclogo">
                 <div class="card-body">
                 <h5 class="card-title">KFC</h5>
@@ -82,7 +84,7 @@
                 <a href="../pages/local.html" class="btn btn-outline-warning btn-block">Ver más</a>
                 </div>
             </div>
-            <div class="card container-fluid col-3 bg-dark text-white" style="height: fit-content;">
+            <div class="card container-fluid col-3 bg-dark text-white cartas" style="height: fit-content;">
                 <img src="../assets/Logos/Mcdonalds.png" class="card-img-top img-fluid img-thumbnail" alt="mcdonaldslogo">
                 <div class="card-body">
                 <h5 class="card-title">McDonalds</h5>
@@ -90,7 +92,7 @@
                 <a href="../pages/local.html" class="btn btn-outline-warning btn-block">Ver más</a>
                 </div>
             </div>
-            <div class="card container-fluid col-3 bg-dark text-white" style="height: fit-content;">
+            <div class="card container-fluid col-3 bg-dark text-white cartas" style="height: fit-content;">
                 <img src="../assets/Logos/BURGER-KING.png" class="card-img-top img-fluid img-thumbnail" alt="burguerkinglogo">
                 <div class="card-body">
                 <h5 class="card-title">Burguer King</h5>
@@ -104,7 +106,7 @@
         <p class="display-1 text-center tipo__comida" id="gourmet"><strong>Gourmet</strong></p>
         <div class="card-group container-fluid container-sm cartas">
             <div class="row">
-                <div class="card container-fluid col-3 bg-dark text-white" style="height: fit-content;">
+                <div class="card container-fluid col-3 bg-dark text-white cartas" style="height: fit-content;">
                     <img src="../assets/Logos/fenicia.jpg" class="card-img-top img-fluid img-thumbnail" alt="fenicialogo">
                     <div class="card-body">
                     <h5 class="card-title">Fenicia</h5>
@@ -112,7 +114,7 @@
                     <a href="../pages/local.html" class="btn btn-outline-warning btn-block">Ver más</a>
                     </div>
                 </div>
-                <div class="card container-fluid col-3 bg-dark text-white" style="height: fit-content;">
+                <div class="card container-fluid col-3 bg-dark text-white cartas" style="height: fit-content;">
                     <img src="../assets/Logos/el-zocalo-autentica-comida.jpg" class="card-img-top img-fluid img-thumbnail" alt="zocalologo">
                     <div class="card-body">
                     <h5 class="card-title">El Zócalo</h5>
@@ -120,7 +122,7 @@
                     <a href="../pages/local.html" class="btn btn-outline-warning btn-block">Ver más</a>
                     </div>
                 </div>
-                <div class="card container-fluid col-3 bg-dark text-white" style="height: fit-content;">
+                <div class="card container-fluid col-3 bg-dark text-white cartas" style="height: fit-content;">
                     <img src="../assets/Logos/restaurant-LA-GALITE.jpg" class="card-img-top img-fluid img-thumbnail" alt="galitelogo">
                     <div class="card-body">
                     <h5 class="card-title">La Galite</h5>
@@ -134,7 +136,7 @@
         <p class="display-1 text-center tipo__comida" id="familiar"><strong>Familiar</strong></p>
         <div class="card-group container-fluid container-sm cartas">
             <div class="row">
-                <div class="card container-fluid col-3 bg-dark text-white" style="height: fit-content;">
+                <div class="card container-fluid col-3 bg-dark text-white cartas" style="height: fit-content;">
                     <img src="../assets/Logos/san-carbon-parrilla-bar-2016.jpg" class="card-img-top img-fluid img-thumbnail" alt="carbonlogo">
                     <div class="card-body">
                     <h5 class="card-title">San Carbon</h5>
@@ -142,7 +144,7 @@
                     <a href="../pages/local.html" class="btn btn-outline-warning btn-block">Ver más</a>
                     </div>
                 </div>
-                <div class="card container-fluid col-3 bg-dark text-white" style="height: fit-content;">
+                <div class="card container-fluid col-3 bg-dark text-white cartas" style="height: fit-content;">
                     <img src="../assets/Logos/elcielo.jpg" class="card-img-top img-fluid img-thumbnail" alt="cielologo">
                     <div class="card-body">
                     <h5 class="card-title">El Cielo</h5>
@@ -150,7 +152,7 @@
                     <a href="../pages/local.html" class="btn btn-outline-warning btn-block">Ver más</a>
                     </div>
                 </div>
-                <div class="card container-fluid col-3 bg-dark text-white" style="height: fit-content;">
+                <div class="card container-fluid col-3 bg-dark text-white cartas" style="height: fit-content;">
                     <img src="../assets/Logos/DEJ.jpg" class="card-img-top img-fluid img-thumbnail" alt="quererlogo">
                     <div class="card-body">
                     <h5 class="card-title">Dejate Querer</h5>
@@ -164,7 +166,7 @@
         <p class="display-1 text-center tipo__comida" id="bar"><strong>Bar</strong></p>
         <div class="card-group container-fluid container-sm cartas">
             <div class="row">
-                <div class="card container-fluid col-3 bg-dark text-white" style="height: fit-content;">
+                <div class="card container-fluid col-3 bg-dark text-white cartas" style="height: fit-content;">
                     <img src="../assets/Logos/habanita.png" class="card-img-top img-fluid img-thumbnail" alt="habanitalogo">
                     <div class="card-body">
                     <h5 class="card-title">La Habanita</h5>
@@ -172,7 +174,7 @@
                     <a href="../pages/local.html" class="btn btn-outline-warning btn-block">Ver más</a>
                     </div>
                 </div>
-                <div class="card container-fluid col-3 bg-dark text-white" style="height: fit-content;">
+                <div class="card container-fluid col-3 bg-dark text-white cartas" style="height: fit-content;">
                     <img src="../assets/Logos/triada.jpg" class="card-img-top img-fluid img-thumbnail" alt="triadalogo">
                     <div class="card-body">
                     <h5 class="card-title">La Triada</h5>
@@ -180,7 +182,7 @@
                     <a href="../pages/local.html" class="btn btn-outline-warning btn-block">Ver más</a>
                     </div>
                 </div>
-                <div class="card container-fluid col-3 bg-dark text-white" style="height: fit-content;">
+                <div class="card container-fluid col-3 bg-dark text-white cartas" style="height: fit-content;">
                     <img src="../assets/Logos/palmitas-siempre.jpg" class="card-img-top img-fluid img-thumbnail" alt="palmitaslogo">
                     <div class="card-body">
                     <h5 class="card-title">Palmitas</h5>
