--- a/pages/reservar.html
+++ b/pages/reservar.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Reservar</title>
+    <title>ReservasOnline-Reservar</title>
     <link rel="stylesheet" href="../sass/estilos.css">
     <link rel="stylesheet" href="../libs/bootstrap-5.1.3-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../libs/bootstrap-5.1.3-dist/js/bootstrap.min.js">
+    <meta name="description" content="Completa la reserva de tu local elegido en tan solo unos simples pasos.">
+    <meta name="keywords"  content="reservar, reservar restaurante, comida, restaurante, local gastronomico, mejores restaurantes, restaurantes acogedores e intimos, restaurantes cercanos, restaurantes cercanos, restaurantes argentinos, local de comida">
 </head>
 <body class="cuerpoReservar">
     <header class="header">
