Subida al servidor

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
                     <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
-                    <a class="nav-link" href="https://goo.gl/maps/Tqo8Wybzqh3nLFT19" target="_blanck">Cercanos a mi</a>
+                    <a class="nav-link" href="https://goo.gl/maps/Tqo8Wybzqh3nLFT19" target="_blank">Cercanos a mi</a>
                     <a class="nav-link" href="./pages/lista.html">Locales</a>
                     <a class="nav-link" href="./pages/contacto.html">Contacto</a>
                 </div>
